--- a/main.html
+++ b/main.html
@@ -8,6 +8,23 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+<div id="soundbar">
+	<div id="buttons">
+		<button class="btn" onclick="playSound('applause')">applause</button>
+		<button class="btn" onclick="playSound('boo')">boo</button>
+		<button class="btn" onclick="playSound('gasp')">gasp</button>
+		<button class="btn" onclick="playSound('tada')">tada</button>
+		<button class="btn" onclick="playSound('victory')">victory</button>
+		<button class="btn" onclick="playSound('wrong')">wrong</button>
+		<button class="stop" onclick="playSound('stop')">stop</button>
+	</div>
+</div>
+
+
+
+
+
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
