--- a/main.html
+++ b/main.html
@@ -10,13 +10,13 @@
 	<!-- the entire body must be written by student -->
 <div id="soundbar">
 	<div id="buttons">
-		<button class="btn" onclick="playSound('applause')">applause</button>
-		<button class="btn" onclick="playSound('boo')">boo</button>
-		<button class="btn" onclick="playSound('gasp')">gasp</button>
-		<button class="btn" onclick="playSound('tada')">tada</button>
-		<button class="btn" onclick="playSound('victory')">victory</button>
-		<button class="btn" onclick="playSound('wrong')">wrong</button>
-		<button class="stop" onclick="playSound('stop')">stop</button>
+		<button class="btn" onclick="PlayingAudio('applause')">applause</button>
+		<button class="btn" onclick="PlayingAudio('boo')">boo</button>
+		<button class="btn" onclick="PlayingAudio('gasp')">gasp</button>
+		<button class="btn" onclick="PlayingAudio('tada')">tada</button>
+		<button class="btn" onclick="PlayingAudio('victory')">victory</button>
+		<button class="btn" onclick="PlayingAudio('wrong')">wrong</button>
+		<button class="stop" onclick="PlayingAudio('stop')">stop</button>
 	</div>
 </div>
 
