--- a/main.html
+++ b/main.html
@@ -8,9 +8,13 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<audio controls>
+  <source src="horse.mp3" type="audio/mpeg">
+</audio>
 <div id="soundbar">
 	<div id="buttons">
-		<button class="btn" onclick="PlayingAudio('applause')">applause</button>
+		<button class="btn" onclick="PlayingAudio('applause')">applause
+		</button>
 		<button class="btn" onclick="PlayingAudio('boo')">boo</button>
 		<button class="btn" onclick="PlayingAudio('gasp')">gasp</button>
 		<button class="btn" onclick="PlayingAudio('tada')">tada</button>
@@ -18,13 +22,7 @@
 		<button class="btn" onclick="PlayingAudio('wrong')">wrong</button>
 		<button class="stop" onclick="PlayingAudio('stop')">stop</button>
 	</div>
-</div>
-
-
-
-
-
-	
+</div>	
     <script type="text/javascript" src="./script.js">
 </script>
 
