--- a/main.html
+++ b/main.html
@@ -8,10 +8,11 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<audio controls>
+	
+<div id="soundbar">
+	<audio controls id="sound">
   <source src="horse.mp3" type="audio/mpeg">
 </audio>
-<div id="soundbar">
 	<div id="buttons">
 		<button class="btn" onclick="PlayingAudio('applause')">applause
 		</button>
