--- a/main.html
+++ b/main.html
@@ -10,9 +10,6 @@
 	<!-- the entire body must be written by student -->
 	
 <div id="soundbar">
-	<audio controls id="sound">
-  <source src="C:\Users\AnandMehalai\Downloads\Theatre Applause - QuickSounds.com.mp3" type="audio/mpeg">
-</audio>
 	<div id="buttons">
 		<button class="btn" onclick="PlayingAudio('applause')">applause
 		</button>
@@ -21,7 +18,7 @@
 		<button class="btn" onclick="PlayingAudio('tada')">tada</button>
 		<button class="btn" onclick="PlayingAudio('victory')">victory</button>
 		<button class="btn" onclick="PlayingAudio('wrong')">wrong</button>
-		<button class="stop" onclick="PlayingAudio('stop')">stop</button>
+		<button class="stop" onclick="stopSound()">stop</button>
 	</div>
 </div>	
     <script type="text/javascript" src="./script.js">
