--- a/main.html
+++ b/main.html
@@ -13,11 +13,11 @@
 	<div id="buttons">
 		<button class="btn" onclick="PlayingAudio('applause')">applause
 		</button>
-		<button class="btn" onclick="PlayingAudio('boo')">boo</button>
-		<button class="btn" onclick="PlayingAudio('gasp')">gasp</button>
-		<button class="btn" onclick="PlayingAudio('tada')">tada</button>
-		<button class="btn" onclick="PlayingAudio('victory')">victory</button>
-		<button class="btn" onclick="PlayingAudio('wrong')">wrong</button>
+		<button class="btn" onclick="PlayingAudio(boo)">boo</button>
+		<button class="btn" onclick="PlayingAudio(gasp)">gasp</button>
+		<button class="btn" onclick="PlayingAudio(tada)">tada</button>
+		<button class="btn" onclick="PlayingAudio(victory)">victory</button>
+		<button class="btn" onclick="PlayingAudio(wrong)">wrong</button>
 		<button class="stop" onclick="stopSound()">stop</button>
 	</div>
 </div>	
