--- a/main.html
+++ b/main.html
@@ -11,8 +11,7 @@
 	
 <div id="soundbar">
 	<div id="buttons">
-		<button class="btn" onclick="PlayingAudio('applause')">applause
-		</button>
+		<button class="btn" onclick="PlayingAudio('applause')">applause</button>
 		<button class="btn" onclick="PlayingAudio('boo')">boo</button>
 		<button class="btn" onclick="PlayingAudio('gasp')">gasp</button>
 		<button class="btn" onclick="PlayingAudio('tada')">tada</button>
@@ -21,8 +20,7 @@
 		<button class="stop" onclick="stopSound()">stop</button>
 	</div>
 </div>	
-    <script type="text/javascript" src="./script.js">
-</script>
+<script type="text/javascript" src="./script.js"></script>
 
 </body>
 
